--- a/css/訂單查詢.css
+++ b/css/訂單查詢.css
@@ -87,19 +87,7 @@ th{
     padding:5px 0px !important; 
 }
 .modal{
-    position: absolute;
-    width:370px;
-    height:600px;
-    top:0;
-    right:0;
-    bottom:0;
-    left:0;
-    margin:auto;
-}
-body{
-    position: relative;
-    width:100%;
-    height:100%;
+    margin-top: 30px;
 }
 .modal-table td{
     padding: 5px !important;
